sketch processor in electron. tweak ui a little

--- a/electron/index.html
+++ b/electron/index.html
@@ -25,8 +25,15 @@
           <div class="pane pane-sm sidebar">
             <nav class="nav-group">
               <h5 class="nav-group-title">Load Data</h5>
-              <input type="file" />
-              <div id="filename"></div>
+              <span class="nav-group-item">
+                <input id="file-loader" type="file" />
+              </span>
+              <span class="nav-group-item">
+                <button class="reload btn btn-default">
+                  <span class="reload icon icon-arrows-ccw"></span>
+                  Reload
+                </button>
+              </span>
 
               <h5 class="nav-group-title">Test Suites</h5>
               <span class="nav-group-item">
