hook up processing in electron app

--- a/electron/index.html
+++ b/electron/index.html
@@ -7,9 +7,6 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="css/photon.css">
     <link rel="stylesheet" href="css/dataproofer.css">
-
-    <!-- Javascript -->
-    <script src="js/renderer.js"></script>
   </head>
   <body>
     <div class="window">
@@ -77,5 +74,9 @@
         </div>
       </div>
     </div>
+
+    <!-- Javascript -->
+    <script src="js/renderer.js"></script>
+    <script src="js/processor.js"></script>
   </body>
 </html>
