minor improvement to htmlrenderer setup

--- a/electron/index.html
+++ b/electron/index.html
@@ -45,31 +45,9 @@
           </div>
 
           <div class="pane">
-            <!-- <table class="table-striped"> -->
-            <table>
-              <thead>
-                <tr>
-                  <th>Pass/Fail</th>
-                  <th>Test</th>
-                  <th>Purpose</th>
-                  <th>Message</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td><span class="icon icon-check"></span></td>
-                  <td>Column Headers</td>
-                  <td>Make sure column headers are present</td>
-                  <td>All column headers are present</td>
-                </tr>
-                <tr>
-                  <td><span class="icon icon-cancel-circled"></span></td>
-                  <td>Foo bar</td>
-                  <td>Make sure the bars are foo'd</td>
-                  <td>It appears your 5th row is not foobar'd</td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="test-results">
+              <!-- we will insert our results here -->
+            </div>
           </div>
         </div>
       </div>
