minor ui improvements

--- a/electron/index.html
+++ b/electron/index.html
@@ -33,6 +33,10 @@
               </span>
 
               <h5 class="nav-group-title">Test Suites</h5>
+              <span class="nav-group-item active">
+                <span class="icon icon-inbox"></span>
+                Core
+              </span>
               <span class="nav-group-item">
                 <span class="icon icon-inbox"></span>
                 Mapping and Geography
