add slickgrid to preview dataset

--- a/electron/index.html
+++ b/electron/index.html
@@ -5,6 +5,8 @@
     <title>Data Proofer</title>
 
     <!-- Stylesheets -->
+    <link rel="stylesheet" href="../node_modules/slickgrid/grid.css">
+    <link rel="stylesheet" href="../node_modules/slickgrid/css/smoothness/jquery-ui-1.8.16.custom.css" type="text/css"/>
     <link rel="stylesheet" href="css/photon.css">
     <link rel="stylesheet" href="css/dataproofer.css">
   </head>
@@ -52,6 +54,8 @@
             <div class="test-results">
               <!-- we will insert our results here -->
             </div>
+            <div id="grid">
+          </div>
           </div>
         </div>
       </div>
