use tabletop to support published google sheets

--- a/electron/index.html
+++ b/electron/index.html
@@ -24,13 +24,20 @@
           <div class="pane pane-sm sidebar">
             <nav class="nav-group">
               <h5 class="nav-group-title">Load Data</h5>
-              <span class="nav-group-item">
+              <span class="nav-group-row">
                 <input id="file-loader" type="file" />
               </span>
-              <span class="nav-group-item">
+              <span class="nav-group-row">
+                <!--
                 <button class="reload btn btn-default">
                   <span class="reload icon icon-arrows-ccw"></span>
                   Reload
+                </button>
+                -->
+                <br>
+                <input id='spreadsheet-input' placeholder="Google Spreadsheet URL or ID">
+                <button class="tabletop-loader btn btn-default">
+                  <span class="icon icon-download"></span>
                 </button>
               </span>
 
