refactor for packaging in electron

--- a/electron/index.html
+++ b/electron/index.html
@@ -5,8 +5,8 @@
     <title>Data Proofer</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="../node_modules/slickgrid/grid.css">
-    <link rel="stylesheet" href="../node_modules/slickgrid/css/smoothness/jquery-ui-1.8.16.custom.css" type="text/css"/>
+    <link rel="stylesheet" href="node_modules/slickgrid/grid.css">
+    <link rel="stylesheet" href="node_modules/slickgrid/css/smoothness/jquery-ui-1.8.16.custom.css" type="text/css"/>
     <link rel="stylesheet" href="css/photon.css">
     <link rel="stylesheet" href="css/dataproofer.css">
   </head>
@@ -71,5 +71,6 @@
     <!-- Javascript -->
     <script src="js/renderer.js"></script>
     <script src="js/processor.js"></script>
+    
   </body>
 </html>
