more test data. restructure rendering slightly to be per-suite

--- a/electron/index.html
+++ b/electron/index.html
@@ -58,7 +58,7 @@
           </div>
 
           <div class="pane">
-            <div class="test-results">
+            <div class="suites">
               <!-- we will insert our results here -->
             </div>
             <div id="grid">
@@ -71,6 +71,6 @@
     <!-- Javascript -->
     <script src="js/renderer.js"></script>
     <script src="js/processor.js"></script>
-    
+
   </body>
 </html>
