--- a/electron/index.html
+++ b/electron/index.html
@@ -7,64 +7,47 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="node_modules/slickgrid/grid.css">
     <link rel="stylesheet" href="node_modules/slickgrid/css/smoothness/jquery-ui-1.8.16.custom.css" type="text/css"/>
-    <link rel="stylesheet" href="css/photon.css">
     <link rel="stylesheet" href="css/dataproofer.css">
   </head>
   <body>
     <div class="window">
-
       <!-- .toolbar-header sits at the top of your app -->
       <header class="toolbar toolbar-header">
-        <h1 class="title">Photon</h1>
+        <h1 class="title">Dataproofer</h1>
       </header>
 
       <!-- All our content goes inside .window-content -->
       <div class="window-content">
-        <div class="pane-group">
-          <div class="pane pane-sm sidebar">
-            <nav class="nav-group">
-              <h5 class="nav-group-title">Load Data</h5>
-              <span class="nav-group-row">
-                <input id="file-loader" type="file" />
-              </span>
-              <span class="nav-group-row">
-                <!--
-                <button class="reload btn btn-default">
-                  <span class="reload icon icon-arrows-ccw"></span>
-                  Reload
-                </button>
-                -->
-                <br>
-                <input id='spreadsheet-input' placeholder="Google Spreadsheet URL or ID">
-                <button class="tabletop-loader btn btn-default">
-                  <span class="icon icon-download"></span>
-                </button>
-              </span>
-
-              <h5 class="nav-group-title">Test Suites</h5>
-              <span class="nav-group-item active">
-                <span class="icon icon-inbox"></span>
-                Core
-              </span>
-              <span class="nav-group-item">
-                <span class="icon icon-inbox"></span>
-                Mapping and Geography
-              </span>
-              <span class="nav-group-item">
-                <span class="icon icon-inbox"></span>
-                Statistics
-              </span>
-            </nav>
+        <div class="steps">
+          <div class="step step-1-data">
+            <h2 class="title">Step 1: Load data</h5>
+            <span class="nav-group-row">
+              <input id="file-loader" type="file" />
+            </span>
+            <span class="nav-group-row">
+              <!--
+              <button class="reload btn btn-default">
+                <span class="reload icon icon-arrows-ccw"></span>
+                Reload
+              </button>
+              -->
+              <br>
+              <input id='spreadsheet-input' placeholder="Google Spreadsheet URL or ID">
+              <button class="tabletop-loader btn btn-default">
+                <span class="icon icon-download"></span>
+              </button>
+            </span>
           </div>
-
-          <div class="pane">
-            <div class="suites">
-              <!-- we will insert our results here -->
-            </div>
-            <div id="grid">
+          <div class="step step-2-suites">
+            <h2 class="title">Step 2: Select tests</h5>
+            <!-- we will insert our test suites here -->
           </div>
+          <div class="step step-3-results">
+            <h2 class="title">Step 3: Review test results</h5>
+            <!-- we will insert our results here -->
           </div>
         </div>
+        <div id="grid" class="spreadsheet"></div>
       </div>
     </div>
 
