move test requires to electron app to allow for dynamic selection

--- a/electron/index.html
+++ b/electron/index.html
@@ -38,7 +38,7 @@
               </button>
             </span>
           </div>
-          <div class="step step-2-suites">
+          <div class="step step-2-select">
             <h2 class="title">Step 2: Select tests</h5>
             <!-- we will insert our test suites here -->
           </div>
