minor display bug. make button part of html

--- a/electron/index.html
+++ b/electron/index.html
@@ -42,6 +42,9 @@
             <h2 class="title">Step 2: Select tests</h5>
             <!-- we will insert our test suites here -->
           </div>
+          
+          <button class="run-tests">Run tests</button>
+
           <div class="step step-3-results">
             <h2 class="title">Step 3: Review test results</h5>
             <!-- we will insert our results here -->
