rename a file to be less confusing

--- a/electron/index.html
+++ b/electron/index.html
@@ -42,7 +42,7 @@
             <h2 class="title">Step 2: Select tests</h5>
             <!-- we will insert our test suites here -->
           </div>
-          
+
           <button class="run-tests">Run tests</button>
 
           <div class="step step-3-results">
@@ -56,7 +56,7 @@
 
     <!-- Javascript -->
     <script src="js/renderer.js"></script>
-    <script src="js/processor.js"></script>
+    <script src="js/controller.js"></script>
 
   </body>
 </html>
