--- a/electron/index.html
+++ b/electron/index.html
@@ -23,6 +23,11 @@
           <span id="current-file-name"></span> <!-- | <span id="number-selected-tests">0</span> Tests Selected -->
         </div>
 
+        <div id="nav-buttons">
+          <button id="back-button" class="btn btn-large"></button>
+          <button id="forward-button" class="btn btn-large"></button>
+        </div>
+
         <div class="steps">
           <div class="step step-1-data">
             <h2 class="title">Step 1: Load data</h5>
