--- a/electron/index.html
+++ b/electron/index.html
@@ -5,8 +5,9 @@
     <title>Data Proofer</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="node_modules/slickgrid/grid.css">
-    <link rel="stylesheet" href="node_modules/slickgrid/css/smoothness/jquery-ui-1.8.16.custom.css" type="text/css"/>
+    <!-- <link rel="stylesheet" href="node_modules/slickgrid/grid.css"> -->
+    <link rel="stylesheet" href="node_modules/handsontable/dist/handsontable.full.css">
+    <!-- <link rel="stylesheet" href="node_modules/slickgrid/css/smoothness/jquery-ui-1.8.16.custom.css" type="text/css"/> -->
     <link rel="stylesheet" href="css/dataproofer.css">
   </head>
   <body>
@@ -69,6 +70,7 @@
     </div>
 
     <!-- Javascript -->
+    <script src="node_modules/handsontable/dist/handsontable.full.js"></script>
     <script src="js/renderer.js"></script>
     <script src="js/controller.js"></script>
 
