--- a/electron/index.html
+++ b/electron/index.html
@@ -64,7 +64,9 @@
             <h2 class="title">Step 3: Review test results</h5>
             <!-- we will insert our results here -->
           </div>
-          <div id="grid" class="spreadsheet"></div>
+          <div id="grid-wrapper">
+            <div id="grid" class="spreadsheet"></div>
+          </div>
         </div>
       </div>
     </div>
