Styling and copy changes

--- a/electron/index.html
+++ b/electron/index.html
@@ -44,7 +44,7 @@
               -->
 
             <input id="spreadsheet-input" placeholder="Paste Google Spreadsheet URL or ID">
-            <button id="spreadsheet-button">Load</button>
+            <button id="spreadsheet-button">Load Sheet</button>
 
             <div id="gsheets-response">
             </div>
