copy and save tests. hot loads on edit

--- a/electron/index.html
+++ b/electron/index.html
@@ -74,9 +74,9 @@
             <input id="test-editor-description" placeholder="Short description of test">
             <br>
             <div id="test-editor-js"></div>
-
-            <button id="cancel-test" class="btn btn-large">Cancel</button>
-            <button id="save-test" style="display: none;" class="btn btn-large">Save</button>
+            <button id="cancel-test">Cancel</button>
+            <button id="copy-test">Copy</button>
+            <button id="save-test" style="display: none;">Save</button>
           </div>
 
         </div>
