--- a/electron/index.html
+++ b/electron/index.html
@@ -32,7 +32,7 @@
         <div class="steps">
           <div class="step step-1-data">
             <h2 class="title">Step 1: Load data</h5>
-
+            <h4>XLSX, XLS, CSV, TSV, or PSV files</h4>
             <input id="file-loader" type="file" /><label id="file-loader-button" for="file-loader">Choose a dataset</label>
 
             <h3 id="or-separator">Or...</h3>
