update the finger print

--- a/electron/index.html
+++ b/electron/index.html
@@ -67,6 +67,10 @@
           <div id="grid-wrapper">
             <div id="grid" class="spreadsheet"></div>
           </div>
+          <div id="fingerprint-wrapper">
+            <canvas id="fingerprint"></canvas>
+            <svg id="fingerprint-overlay"></svg>
+          </div>
           <div class="test-editor" style="display:none">
             <h3>Editing test:</h3>
             <input id="test-editor-name" placeholder="Name of test">
