improved fingerprint UX. warn about large files

--- a/electron/index.html
+++ b/electron/index.html
@@ -23,6 +23,7 @@
       <div class="window-content">
         <div id="info-top-bar">
           <span id="current-file-name"></span> <!-- | <span id="number-selected-tests">0</span> Tests Selected -->
+          <span id="file-size-warning"></span>
           <div id="nav-buttons">
             <button id="back-button" style="display: none;" class="btn btn-large"></button>
             <button id="forward-button" style="display: none;" class="btn btn-large"></button>
