--- a/electron/index.html
+++ b/electron/index.html
@@ -7,8 +7,10 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="node_modules/handsontable/dist/handsontable.full.css">
     <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css">
-    <link rel="stylesheet" href="node_modules/codemirror/theme/mdn-like.css">
+    <!-- <link rel="stylesheet" href="node_modules/codemirror/theme/mdn-like.css"> -->
+    <link rel="stylesheet" href="css/minimaltheme.css">
     <link rel="stylesheet" href="css/dataproofer.css">
+    <link rel="stylesheet" href="css/photon-icons.css">
 
   </head>
   <body>
