--- a/electron/index.html
+++ b/electron/index.html
@@ -37,9 +37,8 @@
         <div class="steps">
           <div class="step step-1-data">
             <h1><img id="intro-logo" src="img/dataproofer-logo-2.png" alt="Dataproofer"/></h1>
-            <h4>Slack style welcome message?</h4>
             <div id="dataproofer-intro-description">
-              Dataproofer is here. Load the dataset you'd like to run some checks on. Then you can run all of our checks automatically or select checks specific for what you're trying to do.
+              Upload your dataset, then select from Dataproofer’s suite of tests to identify any potential red flags before use.
             </div>
             <!-- <h2 class="title">Step 1: Load data you'd like to run tests on</h5> -->
             <input id="file-loader" type="file" /><label id="file-loader-button" for="file-loader"><i class="fa fa-search"></i> Select a dataset</label>
@@ -55,24 +54,24 @@
               -->
 
             <input id="spreadsheet-input" placeholder="Paste Google Spreadsheet URL or ID">
-            <button id="spreadsheet-button"><i class="fa fa-google"></i> Load</button>
+            <button id="spreadsheet-button"><i class="fa fa-cloud-download"></i> Load sheet</button>
 
             <div id="gsheets-response">
             </div>
 
           </div>
           <div class="step step-2-select">
-            <button class="btn btn-large run-tests">Run tests</button>
-            <h2 class="title">Modify your tests</h5>
+            <button id="top-run-tests" class="btn btn-large run-tests"><i class="fa fa-cogs"></i> Run checks</button>
+            <h2 class="title">Modify your checks</h5>
             <!-- we will insert our test suites here -->
             <div class="step-2-select-content">
             </div>
 
-            <button class="btn btn-large run-tests">Run tests</button>
+            <button class="btn btn-large run-tests"><i class="fa fa-cogs"></i> Run checks</button>
           </div>
 
           <div class="step step-3-results">
-            <h2 class="title">Step 3: <br /> Review test results</h5>
+            <h2 class="title">Step 3: <br /> Review check results</h5>
             <!-- we will insert our results here -->
           </div>
           <div id="grid-wrapper">
@@ -83,9 +82,9 @@
             </div>
           </div>
           <div class="test-editor" style="display:none">
-            <h3>Editing test:</h3>
-            <input id="test-editor-name" placeholder="Name of test">
-            <input id="test-editor-description" placeholder="Short description of test">
+            <h3>Editing check:</h3>
+            <input id="test-editor-name" placeholder="Name of check">
+            <input id="test-editor-description" placeholder="Short description of check">
             <div id="test-editor-js"></div>
             <button id="cancel-test">Cancel</button>
             <button id="copy-test">Copy</button>
