--- a/electron/index.html
+++ b/electron/index.html
@@ -62,7 +62,7 @@
           </div>
           <div class="step step-2-select">
             <button id="top-run-tests" class="btn btn-large run-tests"><i class="fa fa-cogs"></i> Run checks</button>
-            <h2 class="title">Modify your checks</h5>
+            <!-- <h2 class="title">Modify your checks</h5> -->
             <!-- we will insert our test suites here -->
             <div class="step-2-select-content">
             </div>
@@ -71,7 +71,6 @@
           </div>
 
           <div class="step step-3-results">
-            <h2 class="title">Step 3: <br /> Review check results</h5>
             <!-- we will insert our results here -->
           </div>
           <div id="grid-wrapper">
