Changing some icons, tests -> checks

--- a/electron/index.html
+++ b/electron/index.html
@@ -38,7 +38,7 @@
           <div class="step step-1-data">
             <h1><img id="intro-logo" src="img/dataproofer-logo-2.png" alt="Dataproofer"/></h1>
             <div id="dataproofer-intro-description">
-              Upload your dataset, then select from Dataproofer’s suite of tests to identify any potential red flags before use.
+              Upload your dataset, then select from Dataproofer’s suite of checks to identify any potential red flags before use.
             </div>
             <!-- <h2 class="title">Step 1: Load data you'd like to run tests on</h5> -->
             <input id="file-loader" type="file" /><label id="file-loader-button" for="file-loader"><i class="fa fa-search"></i> Select a dataset</label>
@@ -61,13 +61,11 @@
 
           </div>
           <div class="step step-2-select">
-            <button id="top-run-tests" class="btn btn-large run-tests"><i class="fa fa-cogs"></i> Run checks</button>
+            <button id="top-run-tests" class="btn btn-large run-tests"><i class="fa fa-cogs"></i> Run selected checks</button>
             <!-- <h2 class="title">Modify your checks</h5> -->
             <!-- we will insert our test suites here -->
             <div class="step-2-select-content">
             </div>
-
-            <button class="btn btn-large run-tests"><i class="fa fa-cogs"></i> Run checks</button>
           </div>
 
           <div class="step step-3-results">
