add info section div for missing columns

--- a/electron/index.html
+++ b/electron/index.html
@@ -61,7 +61,7 @@
 
           </div>
           <div class="step step-2-select">
-            <button id="top-run-tests" class="btn btn-large run-tests"><i class="fa fa-cogs"></i> Run selected checks</button>
+            <button id="top-run-tests" class="btn btn-large run-tests">Run selected checks</button>
             <!-- <h2 class="title">Modify your checks</h5> -->
             <!-- we will insert our test suites here -->
             <div class="step-2-select-content">
