removing display none toggles

--- a/electron/index.html
+++ b/electron/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Data Proofer</title>
+    <title>DataProofer</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="node_modules/handsontable/dist/handsontable.full.css">
@@ -29,8 +29,8 @@
           <span id="current-file-name"></span> <!-- | <span id="number-selected-tests">0</span> Tests Selected -->
           <span id="file-size-warning"></span>
           <div id="nav-buttons">
-            <button id="back-button" style="display: none;" class="btn btn-large"></button>
-            <button id="forward-button" style="display: none;" class="btn btn-large"></button>
+            <button id="back-button" class="btn btn-large"></button>
+            <button id="forward-button" class="btn btn-large"></button>
           </div>
         </div>
 
