--- a/electron/index.html
+++ b/electron/index.html
@@ -3,101 +3,83 @@
   <head>
     <meta charset="UTF-8">
     <title>DataProofer</title>
-
     <!-- Stylesheets -->
     <link rel="stylesheet" href="node_modules/handsontable/dist/handsontable.full.css">
     <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css">
-    <!-- <link rel="stylesheet" href="node_modules/codemirror/theme/mdn-like.css"> -->
     <link rel="stylesheet" href="css/minimaltheme.css">
     <link rel="stylesheet" href="css/dataproofer.css">
     <link rel="stylesheet" href="css/photon-icons.css">
     <link rel="stylesheet" href="css/font-awesome.css">
-
-
   </head>
   <body>
     <div class="window">
-      <!-- .toolbar-header sits at the top of your app
-      <header class="toolbar toolbar-header">
-        <h1 class="title">Dataproofer</h1>
-      </header>
-      -->
-
-      <!-- All our content goes inside .window-content -->
       <div class="window-content">
-        <div id="info-top-bar">
-          <span id="current-file-name"></span> <!-- | <span id="number-selected-tests">0</span> Tests Selected -->
-          <span id="file-size-warning"></span>
-          <div id="nav-buttons">
-            <button id="back-button" class="btn btn-large"></button>
-            <button id="forward-button" class="btn btn-large"></button>
+        <div class="column-1">
+          <div class="column-1-wrapper fixed">
+            <div class="file-info-wrapper">
+              <div class="file-info">
+                <h1><img id="intro-logo" src="img/dataproofer-logo-2.png" alt="Dataproofer"/></h1>
+                <!-- <div id="dataproofer-intro-description">
+                  Upload your dataset, then select from Dataproofer’s sets of tests to identify any potential red flags before use.
+                </div> -->
+                <p><small id="filetypes-accepted">Currently supported:<br/>XLSX, XLS, CSV, TSV, PSV</small></p>
+                <input id="file-loader" type="file" /><label id="file-loader-button" for="file-loader"><i class="fa fa-arrow-up" aria-hidden="true"></i> Load local file</label>
+                <div>
+                  <p>OR</p>
+                </div>
+                <input id="spreadsheet-input" placeholder="Paste Google Spreadsheet URL or ID">
+                <button id="spreadsheet-button"><i class="fa fa-cloud-download"></i> Load sheet</button>
+
+                <div id="gsheets-response">
+                </div>
+                <div id="info-top-bar">
+                  <span id="current-file-name"></span>
+                  <span id="file-size-warning"></span>
+                  <div id="nav-buttons">
+                    <button id="back-button" class="btn btn-large"></button>
+                    <button id="forward-button" class="btn btn-large"></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="test-sets-wrapper">
+              <p>Et qui dolor velit aute aliqua ipsum eu Lorem aute. Commodo commodo qui mollit fugiat sunt eu voluptate. Eu ea laborum officia incididunt do aliquip amet enim proident adipisicing minim non.</p>
+              <p>Elit officia exercitation nisi enim anim aliquip laborum mollit adipisicing officia reprehenderit fugiat quis. Eiusmod sit elit laboris excepteur nulla duis excepteur cupidatat adipisicing voluptate ea. Nisi laborum ullamco eiusmod duis proident consectetur nulla. Lorem fugiat aliquip veniam consequat deserunt non in et id tempor eiusmod incididunt elit velit nostrud amet qui.</p>
+              <p>Nostrud magna qui tempor nulla labore irure sit sint laborum ad. Occaecat anim sint anim eiusmod id cillum eiusmod ullamco laborum labore tempor reprehenderit minim. Sunt officia deserunt ipsum enim velit mollit in magna ut aliqua. Ea labore labore pariatur proident voluptate ad deserunt nulla voluptate proident proident reprehenderit et voluptate cillum. Cupidatat anim consectetur consequat reprehenderit ullamco dolore officia amet.</p>
+              <p>Veniam non anim commodo officia culpa eu voluptate excepteur. Ut irure occaecat id anim nulla mollit ea ullamco eu laboris excepteur. Dolore id amet tempor labore aliquip et sint velit. Magna ex ut incididunt pariatur incididunt sint enim eiusmod et. Dolor labore anim voluptate irure sunt culpa nostrud elit dolor non Lorem.</p>
+            </div>
           </div>
         </div>
-
-        <div class="steps">
-          <div class="step step-1-data">
-            <h1><img id="intro-logo" src="img/dataproofer-logo-2.png" alt="Dataproofer"/></h1>
-            <div id="dataproofer-intro-description">
-              Upload your dataset, then select from Dataproofer’s suite of checks to identify any potential red flags before use.
-            </div>
-            <!-- <h2 class="title">Step 1: Load data you'd like to run tests on</h5> -->
-            <input id="file-loader" type="file" /><label id="file-loader-button" for="file-loader"><i class="fa fa-search"></i> Select a dataset</label>
-            <small id="filetypes-accepted">Currently supported: CSV, TSV, PSV, XLSX, XLS</small>
-
-            <hr />
-
-              <!--
-              <button class="reload btn btn-default">
-                <span class="reload icon icon-arrows-ccw"></span>
-                Reload
-              </button>
-              -->
-
-            <input id="spreadsheet-input" placeholder="Paste Google Spreadsheet URL or ID">
-            <button id="spreadsheet-button"><i class="fa fa-cloud-download"></i> Load sheet</button>
-
-            <div id="gsheets-response">
-            </div>
-
-          </div>
-          <div class="step step-2-select">
-            <button id="top-run-tests" class="btn btn-large run-tests">Run selected checks</button>
-            <!-- <h2 class="title">Modify your checks</h5> -->
-            <!-- we will insert our test suites here -->
-            <div class="step-2-select-content">
-            </div>
-          </div>
-
-          <div class="step step-3-results">
-            <!-- we will insert our results here -->
-          </div>
-          <div id="grid-wrapper">
+        <div class="column-2">
+          <div class="grid-wrapper">
             <div id="grid" class="spreadsheet"></div>
-            <div id="fingerprint-wrapper">
-              <canvas id="fingerprint"></canvas>
-              <svg id="fingerprint-overlay"></svg>
-            </div>
           </div>
-          <div class="test-editor" style="display:none">
-            <h3>Editing check:</h3>
-            <input id="test-editor-name" placeholder="Name of check">
-            <input id="test-editor-description" placeholder="Short description of check">
-            <div id="test-editor-js"></div>
-            <button id="cancel-test">Cancel</button>
-            <button id="copy-test">Copy</button>
-            <button id="save-test">Save</button>
+          <div class="grid-footer-wrapper">
+            <div class="grid-footer"></div>
           </div>
-
+        </div>
+        <div class="column-3">
+          <div class="column-3-wrapper fixed">
+            <canvas id="fingerprint"></canvas>
+            <svg id="fingerprint-overlay"></svg>
+          </div>
+        </div>
+        <div class="test-editor" style="display:none">
+          <h3>Editing check:</h3>
+          <input id="test-editor-name" placeholder="Name of check">
+          <input id="test-editor-description" placeholder="Short description of check">
+          <div id="test-editor-js"></div>
+          <button id="cancel-test">Cancel</button>
+          <button id="copy-test">Copy</button>
+          <button id="save-test">Save</button>
         </div>
       </div>
     </div>
-
     <!-- Javascript -->
     <script src="node_modules/handsontable/dist/handsontable.full.js"></script>
     <script src="node_modules/codemirror/lib/codemirror.js"></script>
     <script src="node_modules/codemirror/mode/javascript/javascript.js"></script>
     <script src="js/renderer.js"></script>
     <script src="js/controller.js"></script>
-
   </body>
 </html>
