controller loads tests & toggles after file load

--- a/electron/index.html
+++ b/electron/index.html
@@ -38,12 +38,12 @@
               </div>
             </div>
           </div>
-          <!-- <div class="test-sets-wrapper">
-            <p>Et qui dolor velit aute aliqua ipsum eu Lorem aute. Commodo commodo qui mollit fugiat sunt eu voluptate. Eu ea laborum officia incididunt do aliquip amet enim proident adipisicing minim non.</p>
+          <div class="test-sets">
+            <!-- <p>Et qui dolor velit aute aliqua ipsum eu Lorem aute. Commodo commodo qui mollit fugiat sunt eu voluptate. Eu ea laborum officia incididunt do aliquip amet enim proident adipisicing minim non.</p>
             <p>Elit officia exercitation nisi enim anim aliquip laborum mollit adipisicing officia reprehenderit fugiat quis. Eiusmod sit elit laboris excepteur nulla duis excepteur cupidatat adipisicing voluptate ea. Nisi laborum ullamco eiusmod duis proident consectetur nulla. Lorem fugiat aliquip veniam consequat deserunt non in et id tempor eiusmod incididunt elit velit nostrud amet qui.</p>
             <p>Nostrud magna qui tempor nulla labore irure sit sint laborum ad. Occaecat anim sint anim eiusmod id cillum eiusmod ullamco laborum labore tempor reprehenderit minim. Sunt officia deserunt ipsum enim velit mollit in magna ut aliqua. Ea labore labore pariatur proident voluptate ad deserunt nulla voluptate proident proident reprehenderit et voluptate cillum. Cupidatat anim consectetur consequat reprehenderit ullamco dolore officia amet.</p>
-            <p>Veniam non anim commodo officia culpa eu voluptate excepteur. Ut irure occaecat id anim nulla mollit ea ullamco eu laboris excepteur. Dolore id amet tempor labore aliquip et sint velit. Magna ex ut incididunt pariatur incididunt sint enim eiusmod et. Dolor labore anim voluptate irure sunt culpa nostrud elit dolor non Lorem.</p>
-          </div> -->
+            <p>Veniam non anim commodo officia culpa eu voluptate excepteur. Ut irure occaecat id anim nulla mollit ea ullamco eu laboris excepteur. Dolore id amet tempor labore aliquip et sint velit. Magna ex ut incididunt pariatur incididunt sint enim eiusmod et. Dolor labore anim voluptate irure sunt culpa nostrud elit dolor non Lorem.</p> -->
+          </div>
         </div>
         <div class="column column-2">
           <div id="grid" class="spreadsheet">
