button transitions from saying "loading" to "loaded" after the render step closes #92

--- a/electron/index.html
+++ b/electron/index.html
@@ -20,7 +20,9 @@
             <!-- <div id="dataproofer-intro-description">
               Upload your dataset, then select from Dataproofer’s sets of tests to identify any potential red flags before use.
             </div> -->
-            <p><small id="filetypes-accepted">Currently supported filetypes:<br/>XLSX, XLS, CSV, TSV, PSV</small></p>
+            <small id="filetypes-accepted">
+              <p>Currently supported filetypes:<br/>XLSX, XLS, CSV, TSV, PSV</p>
+            </small>
             <input id="file-loader" type="file" /><label id="file-loader-button" for="file-loader"><i class="fa fa-arrow-up" aria-hidden="true"></i> Load local file</label>
             <hr />
             <div class="spreadsheet-input-wrapper">
