add file warning for further styling #90

--- a/electron/index.html
+++ b/electron/index.html
@@ -22,6 +22,7 @@
             </div> -->
             <small id="filetypes-accepted">
               <p>Currently supported filetypes:<br/>XLSX, XLS, CSV, TSV, PSV</p>
+              <p>LARGE FILE ALERT: Dataproofer relies on your computer's processing power. The higher the spec of your machine, the lower the risk the app may crash when processing large datasets. If your dataset is extremely large, we suggest loading samples of 1000 rows.</p>
             </small>
             <input id="file-loader" type="file" /><label id="file-loader-button" for="file-loader"><i class="fa fa-arrow-up" aria-hidden="true"></i> Load local file</label>
             <hr />
@@ -33,7 +34,6 @@
             </div>
             <div id="info-top-bar">
               <span id="current-file-name"></span>
-              <span id="file-size-warning"></span>
               <div id="nav-buttons">
                 <button id="back-button" class="btn btn-large"></button>
                 <button id="forward-button" class="btn btn-large"></button>
