--- a/electron/index.html
+++ b/electron/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="window">
+      <div class="top-bar"></div>
       <div class="window-content">
         <div class="column column-1">
           <div class="file-info">
