--- a/electron/index.html
+++ b/electron/index.html
@@ -46,7 +46,8 @@
         <div class="column column-2">
           <div id="grid" class="spreadsheet"></div>
           <div class="grid-footer">
-            Search
+            <i class="fa fa-search"></i>
+            <input id="search-field" type="search" placeholder="Search">
           </div>
         </div>
         <div class="column column-3">
