hide nav buttons on app load

--- a/electron/index.html
+++ b/electron/index.html
@@ -36,8 +36,8 @@
             <div id="info-top-bar">
               <span id="current-file-name"></span>
               <div id="nav-buttons">
-                <button id="back-button" class="btn btn-large"></button>
-                <button id="forward-button" class="btn btn-large"></button>
+                <button id="back-button" class="btn btn-large" style="display: none;"></button>
+                <button id="forward-button" class="btn btn-large" style="display: none;"></button>
               </div>
             </div>
           </div>
