hide search till grid appears. closes #96

--- a/electron/index.html
+++ b/electron/index.html
@@ -46,8 +46,10 @@
         <div class="column column-2">
           <div id="grid" class="spreadsheet"></div>
           <div class="grid-footer">
-            <i class="fa fa-search"></i>
-            <input id="search-field" type="search" placeholder="Search">
+            <div class="search-wrapper hidden">
+              <i class="fa fa-search"></i>
+              <input id="search-field" type="search" placeholder="Search">
+            </div>
           </div>
         </div>
         <div class="column column-3">
