tooltips are working

--- a/electron/index.html
+++ b/electron/index.html
@@ -6,10 +6,12 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="node_modules/handsontable/dist/handsontable.full.css">
     <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="node_modules/tipsy/src/stylesheets/tipsy.css">
     <link rel="stylesheet" href="css/minimaltheme.css">
     <link rel="stylesheet" href="css/dataproofer.css">
     <link rel="stylesheet" href="css/photon-icons.css">
     <link rel="stylesheet" href="css/font-awesome.css">
+
   </head>
   <body>
     <div class="window">
