fix load button microcopy, hide column 3 until grid loads

--- a/electron/index.html
+++ b/electron/index.html
@@ -54,7 +54,7 @@
             </div>
           </div>
         </div>
-        <div class="column column-3">
+        <div class="column column-3 hidden">
           <div class="overview-title">OVERVIEW</div>
           <canvas id="fingerprint"></canvas>
           <!-- <div class="column-3-filler">
