rework grid dimensions logic

--- a/electron/index.html
+++ b/electron/index.html
@@ -47,8 +47,8 @@
         </div>
         <div class="column column-2">
           <div id="grid" class="spreadsheet"></div>
-          <div class="grid-footer">
-            <div class="search-wrapper hidden">
+          <div class="grid-footer hidden">
+            <div class="search-wrapper">
               <i class="fa fa-search"></i>
               <input id="search-field" type="search" placeholder="Search">
             </div>
