--- a/electron/index.html
+++ b/electron/index.html
@@ -46,7 +46,10 @@
           <div class="test-sets"></div>
         </div>
         <div class="column column-2">
+          <div id="file-size-warning"></div>
+          <div id="grid-container">
           <div id="grid" class="spreadsheet"></div>
+        </div>
           <div class="grid-footer hidden">
             <div class="search-wrapper">
               <i class="fa fa-search"></i>
