--- a/electron/index.html
+++ b/electron/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/dataproofer.css">
     <link rel="stylesheet" href="css/photon-icons.css">
     <link rel="stylesheet" href="css/font-awesome.css">
+    <link rel="stylesheet" href="css/skin.css">
 
   </head>
   <body>
