update summary for sampling progress

--- a/electron/index.html
+++ b/electron/index.html
@@ -27,7 +27,7 @@
             <small id="filetypes-accepted">
               <p>Currently supported filetypes:<br/>XLSX, XLS, CSV, TSV, PSV</p>
             </small>
-            <input id="file-loader" type="file" /><label id="file-loader-button" for="file-loader"><i class="fa fa-arrow-up" aria-hidden="true"></i> Load local file</label>
+            <input id="file-loader" type="file" /><label id="file-loader-button" for="file-loader"><i class="fa fa-search" aria-hidden="true"></i> Select File</label>
             <hr />
             <div class="spreadsheet-input-wrapper">
               <input id="spreadsheet-input" placeholder="Google Spreadsheet URL or ID">
@@ -42,6 +42,7 @@
                 <button id="back-button" class="btn btn-large" style="display: none;"></button>
                 <button id="forward-button" class="btn btn-large" style="display: none;"></button>
               </div>
+              <div id="progress-bar" class="hidden"></div>
             </div>
           </div>
           <div class="test-sets"></div>
