add empty state logic

--- a/electron/index.html
+++ b/electron/index.html
@@ -47,7 +47,7 @@
           </div>
           <div class="test-sets"></div>
         </div>
-        <div class="column column-2">
+        <div class="column column-2" style="background-image:url('img/empty-state-1.png')">
           <div id="grid-container">
           <div id="grid" class="spreadsheet"></div>
         </div>
